[package]
name = "code-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tree-sitter = "0.20.9"

[dev-dependencies]
insta = { version =  "1.26.0" }
similar-asserts = "1.4.2"
tree-sitter-rust = "0.20.3"
